Minor changes to org mode keybinding hook, org-download, orb-babel

--- a/initfile.org
+++ b/initfile.org
@@ -11,7 +11,7 @@ This file contains a first attempt at organizing the loading code for emacs in o
 		     clojure-mode cl leuven-theme deft org-brain typit
                      sdcv flycheck writeroom-mode anki-editor
                      atomic-chrome pdf-tools magithub yaml-mode
-                                   nov org-noter
+                                   nov org-noter org-download
 				   cider 4clojure sourcerer-theme zenburn-theme
 				   golden-ratio htmlize sublime-themes
 				   material-theme dim))
@@ -57,8 +57,7 @@ Loading keybindings, organizational, and language specific code
 
 ;; Xah Fly Keys customization
 
-(define-key xah-fly-leader-key-map
- (kbd "e") 'org-babel-execute-src-block)
+
 
 (define-key xah-fly-leader-key-map
  (kbd "z") 'comment-region)
@@ -77,23 +76,27 @@ Loading keybindings, organizational, and language specific code
 (which-key-mode)
 
 ; org-mode specific leader key sequences
-(add-hook 'org-mode-hook
-(lambda ()
-(setq afm-org-xah-keys (make-sparse-keymap))
-(define-key afm-org-xah-keys (kbd "t") 'org-todo)
-(define-key afm-org-xah-keys (kbd "a") 'org-archive-subtree)
-(define-key afm-org-xah-keys (kbd "s") 'org-schedule)
-(define-key afm-org-xah-keys (kbd "d") 'org-deadline)
-(define-key afm-org-xah-keys (kbd ".") 'org-timestamp)
-(define-key afm-org-xah-keys (kbd "l") 'org-set-tags-command)
-(define-key afm-org-xah-keys (kbd "r") 'org-refile)
-(define-key afm-org-xah-keys (kbd "p") 'org-priority)
-(define-key afm-org-xah-keys (kbd "i") 'org-id-get-create)
-(define-key afm-org-xah-keys (kbd "c") 'anki-editor-insert-note)
-(define-key afm-org-xah-keys (kbd "n") 'org-narrow-to-subtree)
-(define-key afm-org-xah-keys (kbd "w") 'widen)
+(defun afm-xah-org-setup () 
+  (setq afm-org-xah-keys (make-sparse-keymap))
+  (define-key afm-org-xah-keys (kbd "t") 'org-todo)
+  (define-key afm-org-xah-keys (kbd "a") 'org-archive-subtree)
+  (define-key afm-org-xah-keys (kbd "s") 'org-schedule)
+  (define-key afm-org-xah-keys (kbd "d") 'org-deadline)
+  (define-key afm-org-xah-keys (kbd ".") 'org-timestamp)
+  (define-key afm-org-xah-keys (kbd "l") 'org-set-tags-command)
+  (define-key afm-org-xah-keys (kbd "r") 'org-refile)
+  (define-key afm-org-xah-keys (kbd "p") 'org-priority)
+  (define-key afm-org-xah-keys (kbd "i") 'org-id-get-create)
+  (define-key afm-org-xah-keys (kbd "c") 'anki-editor-insert-note)
+  (define-key afm-org-xah-keys (kbd "n") 'org-narrow-to-subtree)
+  (define-key afm-org-xah-keys (kbd "w") 'widen)
+  (define-key xah-fly-leader-key-map (kbd "o") afm-org-xah-keys)
+  (define-key xah-fly-leader-key-map
+    (kbd "e") 'org-babel-execute-src-block)
+)
 
-(define-key xah-fly-leader-key-map (kbd "o") afm-org-xah-keys)))
+(add-hook 'org-mode-hook 'afm-xah-org-setup)
+
 
 
 
@@ -159,6 +162,9 @@ Exporting org mode to other formats
 #+begin_src emacs-lisp :tangle yes
 (require 'ox)
 ;(require 'ox-confluence)
+
+(require 'org-download)
+
 #+end_src 
 
 ** Org-brain + Deft + Journal
@@ -201,6 +207,8 @@ Exporting org mode to other formats
  'org-babel-load-languages
  '((ipython . t)
    (clojure . t)
+   (shell .t)
+   (ditaa .t)
    (python . t)
    (scala .t )))
 
