Appearance tweaks for optimal tiling

--- a/newinit.org
+++ b/newinit.org
@@ -579,11 +579,11 @@ Golden ratio keeps the active window the largest, resizing the others according 
 League Mono is currently the best programming font that I know of. 
 #+begin_src emacs-lisp  
 (add-to-list 'default-frame-alist
-  '(font . "League Mono-12.5"))
+  '(font . "League Mono-12"))
 
-(set-face-font 'fixed-pitch "League Mono-12.5")
-(set-face-font 'variable-pitch "IBM Plex Sans-14:spacing=110")
-(set-face-font 'org-column "League Mono-12.5")
+(set-face-font 'fixed-pitch "League Mono-12")
+(set-face-font 'variable-pitch "IBM Plex Sans-13.5:spacing=110")
+(set-face-font 'org-column "League Mono-12")
 (set-face-font 'mode-line "League Mono-10.5")
 (set-face-font 'mode-line-inactive "League Mono-10.5")
 ;(set-face-font 'linum "League Mono-10.5")
@@ -625,6 +625,7 @@ These features are used to make the rest of the interface look prettier.
    (yas-minor-mode "𝛶")
    (eldoc-mode         ""    eldoc)
    (golden-ratio-mode "φ")
+   (auto-revert-mode "↺")
    (xah-fly-keys "Σ")
    (buffer-face-mode "β")
    (whitespace-mode    " _"  whitespace)
@@ -633,8 +634,10 @@ These features are used to make the rest of the interface look prettier.
    (company-mode "¢")
    (column-enforce-mode "↹")
    (undo-tree-mode "⸙")
+   (ivy-mode "❦")
+   (counsel-mode "⛻")
    (flycheck-mode "✔")
-   (which-key-mode "⌨﹖")
+   (which-key-mode "⌨")
    (atomic-chrome-edit-mode "⚛")
    ))
  (dim-major-names
@@ -673,8 +676,13 @@ These features are used to make the rest of the interface look prettier.
   (face-remap-add-relative 'variable-pitch :family "Charter"
                                            :height 1.0))
 (add-hook 'nov-mode-hook 'my-nov-font-setup)
-
 #+end_src 
+
+Finally, we'll disable some things we don't need when working in a keyboard-centric text editor.
+#+begin_src emacs-lisp
+(scroll-bar-mode -1)
+(tool-bar-mode -1)
+#+end_src
 * Utility
 This function ensures that init.el is tangled each time this file is saved.
 Adapted from [[https://emacs.stackexchange.com/questions/20707/automatically-tangle-org-files-in-a-specific-directory][stack overflow]]. 
